# planslurpen_mcp

./: .gitignore  QUICKSTART.md  README.md  USAGE_EXAMPLES.md  planslurpen_mcp.py  pyproject.toml  requirements.txt
