[project]
name = "planslurpen-mcp"
version = "0.1.0"
description = "MCP server script for Planslurpen"
authors = [
    {name = "2re1million", email = "example@example.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"
]

[project.scripts]
planslurpen = "planslurpen_mcp:main"
